fix of display on mobile for what you get and hack in numbers

--- a/css/styles.css
+++ b/css/styles.css
@@ -773,7 +773,7 @@ body{
 
 @media (max-width:767px){
     .hack-in-numbers__row{
-        max-width: 420px;
+        max-width: 352px;
     }
 }
 
@@ -993,6 +993,12 @@ body{
 }
 
 
+@media (max-width:767px){
+    .what-you-get__title{
+        margin: 0px 0px 30px 0; 
+    }    
+}
+
 .what-you-get__text{
     font-size: 24px;
     text-align: center;
@@ -1016,7 +1022,8 @@ body{
 
 @media (max-width:767px){
     .what-you-get__row{
-        margin: 30px 0px 0px 0px;
+        margin: 0 auto;
+        max-width: 366px;
     }
         
 }
@@ -1038,7 +1045,7 @@ body{
     .what-you-get__item{
         width: 143px;
         height: 143px;
-        margin: 25px 25px; 
+        margin: 20px 20px; 
     }    
 }
 
@@ -1499,7 +1506,7 @@ input:checked ~ .question img{
 .organizers__name{
     font-size: 14px;
     text-align: center;
-    line-height: 20px;
+    line-height: 25px;
     letter-spacing: 0em;
 }
 
@@ -1510,7 +1517,7 @@ input:checked ~ .question img{
     letter-spacing: 0em;
 }
 .organizers__email{
-    font-size: 10px;
+    font-size: 9px;
     text-align: center;
     line-height: 14px;
     letter-spacing: 0em;
